# clarification-trees-v2

./: .gitignore  demo.py  download_data.py  generate_trees.py  merge_lora.py  pyproject.toml  pyrefly.toml  test_graph.py  test_vllm.py  test_vllm_multi_model.py  test_vllm_multi_model_remote.py  train_clarification_lora.py  train_prompt_tuning.py  visualize_trees.py
src/clarification_trees/: __main__.py  dataset.py  dialog_tree.py  harness.py  utils.py
src/clarification_trees/config/: config.yaml
src/clarification_trees/config/answer_model/: qwen_3_vl_32b.yaml
src/clarification_trees/config/clarification_model/: qwen_3_vl_32b_lora_bfloat16.yaml  qwen_3_vl_32b_lora_large_bfloat16.yaml
src/clarification_trees/config/semantic_cluster_model/: bidirectional_entailment_clusterer.yaml  hybrid_clusterer.yaml  sentence_transformers_all_MiniLM_L6_v2.yaml
src/clarification_trees/models/: __init__.py  semantic_clustering.py  transformers_model.py
src/clarification_trees/models/vllm/: __init__.py  cq_vllm_model.py  generic_vllm_model.py  remote_cq_vllm_model.py  remote_vllm_model.py
src/clarification_trees/streamlit/: utils.py
src/clarification_trees/streamlit/components/: __init__.py  dialog_trajectory_component.py
src/clarification_trees/streamlit/pages/: __init__.py  clarifying_question_page.py
